templates/tpl_modified_nova/stylesheet.css
/* ... */
.content_box_payment > span img {
  width:100%;
  height:auto;
  vertical-align:top;
  opacity:0.8;
  filter: grayscale(100%);
}
.content_box_payment > span:hover img {
  opacity:1.0;
  filter: grayscale(0%);
}

.content_box_social {
  padding: 8px 0px;
}
.content_box_social a {
  display:inline-block;
  font-size:24px;
  line-height:24px;
  margin: 0 10px 10px 0;
  vertical-align:top;
  color: var(--footer_social_icons, #666);
}
.content_box_social a:hover {
  color: var(--footer_social_icons_hover, #333);
}

.mod_copyright {
  padding: 20px 0px 30px 0px;
  font-size:11px;
  line-height:17px;
  font-weight:400;
  text-align:center;
  color: var(--footer_copyright, #666);
}
.mod_copyright a,
.mod_copyright a:hover {
  color: var(--footer_copyright, #666);
  text-decoration:none;
  border-bottom: 1px solid var(--footer_copyright_border, #999);
}
.copyright {
  margin:0 auto;
  text-align:center;
  color: var(--footer_copyright, #666);
  font-size:11px;
  line-height:17px;
  font-weight:400;
  padding:0 0 10px 0;
  margin: -51px 0 0 0;
  width:100%;
}
.copyright a {
  color: var(--footer_copyright, #666);
  text-decoration:none;
}
/* ParseTime */
.parseTime {
  margin:0 auto;
  text-align:center;
  color: var(--footer_copyright, #333);
  font-weight:700;
  font-size:10px;
  margin: -12px 0 0 0;
}
/* 22. END footer, copyright, parse time */


/* 23. START postions for CSS Buttons */
.button_row {
  margin: 15px -5px 0px -5px;
  display: flex;
  flex-wrap: wrap;
  flex-direction:column;
}
@media only screen and (min-width: 520px) {
  .button_row { flex-direction:row; }
}

.button_row > .br_left {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  justify-content: flex-start;
}
.button_row > .br_right {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  justify-content: flex-end;
}
.button_row a:hover {
  text-decoration:none;
}
.br_btn_0 {
  padding:5px;
  width:100%;  
}
.br_btn_1 {
  padding:5px;
  min-width:100%;  
}
@media only screen and (min-width: 520px) {
  .br_btn_1 { min-width:250px; }
}

.br_btn_checkout {
  padding:5px;
  width:100%;  
  max-width:480px;
}
.br_btn_checkout .apms_form_inner {
  max-width:480px;
  width:100% !important;
}
.br_btn_checkout .apms_form_button {
  min-width: 100% !important;
  max-width:480px !important;
}
.br_btn_checkout .apms_form_button_inner {
  min-height: 44px !important;
}

.br_btn_alternate {
  display:block;
  width:100%;
  text-align:center;
  height:20px;    
  position:relative;
}
.br_btn_alternate:before {
  content: '';
  display:block;
  height:1px;
  border-top:1px solid #d9d9d9;
  position:absolute;
  top:1px;
  left:10%;  
  right:10%;
  bottom: 0px;
  margin: auto;
}
.br_btn_alternate span {
  position:relative;
  z-index:1;
  display:inline-block;
  vertical-align:top;
  background:#fff;
  font-size:10px;
  line-height:20px;  
  font-weight:400;
  color:#999;
  padding: 0px 10px;
  text-transform:uppercase;
}
/* 23. END postions for CSS Buttons */


/* 24. START CSS Buttons */
/* Globals for CSS Buttons */
.cssButton {
  position:relative;
  font-family: 'Red Hat Display', sans-serif;
  display:flex;
  align-items:center;
  justify-content:center;
  width:100%;
  padding: 9px 5px;
  font-weight:900;
  text-transform:none;
  white-space:nowrap;
  text-decoration:none;
  min-height:44px;
  border-radius:4px;
  transition: all 0.3s ease-in-out;
}
.cssButtonText {
  font-size:13px;
  line-height:24px;
  text-transform:uppercase;
  vertical-align:top;
  padding: 0px 3px;
}
.cssButtonIcon {
  font-size:13px;
  line-height:24px;
  vertical-align:top;
  padding: 0px 3px;
}
.cssButtonIcon .far,
.cssButtonIcon .fas,
.cssButtonIcon .fa-solid,
.cssButtonIcon .fa-regular {
  vertical-align:top;
  line-height:24px;
}
.cssButton button {
  position:absolute;
  left:0px;
  top:0px;
  width:100%;
  height:100%;
  color:transparent;
  cursor:pointer;
  opacity: 0;
}
.cssButton:hover { 
  opacity:0.8;
  text-decoration:none;
}   

/* Colors for CSS Buttons */
/* Color Grey */
.cssButtonColor1 {
  border-radius:4px;
  text-decoration:none;
  border: 1px solid var(--button1_border, rgba(0,0,0,0.1));
  background: var(--button1_background, #ddd);
  color: var(--button1_color, #333);
}
.cssButtonColor1:hover {
  opacity:0.8;
  text-decoration:none !important;
}

/* Color Black */
.cssButtonColor2 {
  border-radius:4px;
  text-decoration:none;
  border: 1px solid var(--button2_border, rgba(0,0,0,0.1));
  background: var(--button2_background, #4d4d4d);
  color: var(--button2_color, #fff);
}
.cssButtonColor2:hover {
  opacity:0.8;
  text-decoration:none !important;
}

/* Color: light grey */
.cssButtonColor3 {
  border-radius:4px;
  border: 1px solid rgba(0,0,0,0.1);
  text-decoration:none;
  background:#eee;
  color:#333;
}
.cssButtonColor3:hover {
  opacity:0.8;
  text-decoration:none !important;
}

/* Green Buttons */
.cssButtonColor4 {
  border-radius:4px;
  border:1px solid rgba(0,0,0,0.1);
  text-decoration:none;
  background-color:#43c875;
  color:#ffffff;
}
.cssButtonColor4:hover {
  opacity:0.8;
  text-decoration:none !important;
}

/* Transparent Icons no Border */
.cssButtonColor5 {
  background:#ccc;
  color:#333;
}
.cssButtonColor5:hover {
  opacity:0.8;
  text-decoration:none !important;
}

/* Yellow Paypal Express Buttons */
.cssButtonColor6 {
  border-radius:2px;
  border:1px solid #d19c20;
  text-decoration:none;
  background-color:#ffc848;
  color:#222;
  display:inline-block;
  text-shadow:1px 1px 0px #ffd97e;
  box-shadow:inset 1px 1px 0px 0px #ffe3a1;
  height:32px;
}
.cssButtonColor6:hover {
  background-color:#fbba22;
  color:#222;
  text-decoration:none !important;
}
.cssButtonColor6 .color-paypal0 {
  font-size:10px;
  line-height:16px;
  font-family:Arial, Helvetica, sans-serif;
  font-weight:bold;
  color:#013088;
  padding: 0 5px 0 0;
  vertical-align:middle;
}
.cssButtonColor6 .color-paypal1 {
  font-size:18px;
  line-height:16px;
  font-family: 'Poppins', sans-serif;
  font-style:italic;
  font-weight:700;
  color:#013088;
}
/* ... */

